update workflows & publisher

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -5,7 +5,7 @@ canonical: https://interop.esante.gouv.fr/ig/fhir/[code] # the last part of cano
 name: ExampleIG # Should be an acronym
 title: ANS IG Example
 publisher:
-  name: ANS
+  name: Agence du Numérique en Santé (ANS) - 2-10 Rue d'Oradour-sur-Glane, 75015 Paris
   url: https://esante.gouv.fr
 status: draft
 version: 0.1.0 # shall conforms to Semantic Versioning https://fr.wiktionary.org/wiki/SemVer
