--- a/.github/workflows/fhir-release.yml
+++ b/.github/workflows/fhir-release.yml
@@ -1,11 +1,8 @@
-name: Workflow Sushi Tests gitHubpages
+name: Workflow Release
 on:
   workflow_call:
-  push:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 jobs:
-  run-sushi-tests_gitHubPages:
+  run-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,5 +16,6 @@ jobs:
           bake: "true"
           nos: "true"
           validator_cli: "true"
-          generate_testscript: "true"
-          generate_plantuml : "true"
+          publish_repo: "ansforge/IG-website-release"
+          publish_repo_token :  ${{ secrets.ANS_IG_API_TOKEN }} 
+          publish_path_outpout : "./IG-website-release/www/ig/fhir"
